# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile
{{cookiecutter.project_slug}}/tests/unit/: test_example.py
